--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,9 +4,11 @@ fastapi==0.109.0
 # ASGI Server
 uvicorn[standard]==0.27.0
 
-# Database ORM and Driver
+# Database ORM and Drivers
 sqlmodel==0.0.14
 asyncpg==0.29.0
+SQLAlchemy==2.0.25
+alembic==1.13.1
 
 # Authentication and Security
 PyJWT==2.8.0
@@ -14,6 +16,12 @@ bcrypt==4.1.2
 
 # Environment Variables
 python-dotenv==1.0.0
+
+# Configuration
+pydantic-settings==2.2.1
+
+# OpenAI Integration
+openai==1.12.0
 
 # CORS Middleware (included in FastAPI but explicit for clarity)
 # fastapi already includes starlette which has CORS support
