--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,5 +23,5 @@ pydantic-settings==2.2.1
 # OpenAI Integration
 openai==1.12.0
 
-# CORS Middleware (included in FastAPI but explicit for clarity)
+# CORS Middleware included in FastAPI but explicit for clarity
 # fastapi already includes starlette which has CORS support
